--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ You can use the configuration by defining testeasypom as the parent by simply ad
   <parent>
       <groupId>io.github.sebivenlo</groupId>
       <artifactId>testeasypom</artifactId>
-      <version>4.0.5</version>
+      <version>4.0.7</version>
       <relativePath/>
   </parent>
 ----
@@ -38,8 +38,6 @@ Features:
 * JavaFX integration when using profile fx (e.g. mvn -P fx package).
 * easy testing of modular JPMS  projects
 
-From now on sebipon will have a repo on its own.
-
 In the table below you find all the properties testeasypom defines.
 All properties have to  be written in the maven format: `<property-name>value</property-name>`,
 where `property-name` is the name, and the `value` is the value.
@@ -50,18 +48,18 @@ where `property-name` is the name, and the `value` is the value.
 |project.build.sourceEncoding |UTF8| source encoding of java files
 |java.lib.dir| /usr/share/java| where the general java libs for extendsions are stored
 |java.release | 11| java version
-|mockito.core.version|3.5.13|
-|junit.jupiter.version|5.7.2|
-|assertj.core.version|3.19.0|
+|mockito.core.version|4.3.1|
+|junit.jupiter.version|5.8.2|
+|assertj.core.version|3.22.0|
 |jacoco.version|0.8.7|
 |jacocoArgLine| |defined to be able to configure jacoco
 |argLine|| to be able to pass extra arguments
 |surefire.opens|| to be able to pass opens statement to the jvm during test runs
-|maven.surefire.version|2.22.2|surefire version
+|maven.surefire.version|3.0.0-M5|surefire version
 |checkstyle.config.location| ${user.home}/.m2/sebivenlo_checks.xml | checkstyle config
 |javadoc.location| /usr/share/doc/openjdk-11-doc/docs/api/|to link javadoc locally
-|pmdVersion|6.35.0|
-|javafx-maven-plugin-version|0.0.6|
+|pmdVersion|6.42.0|
+|javafx-maven-plugin-version|0.0.8|
 |====
 
 
@@ -72,7 +70,7 @@ testeasypom has been derived from sebipom, with the same purpose for fontys venl
 **TL;DR:** Don't do `mvn package` or build (in your IDE) , do `mvn test` instead.
 
 For those that are into test driven something:
-Make it a habit to do `mvn test` instead of `mvn package`. `mvn package` typically does much more work than really required to get your tests do thier work. Enjoy the better maven experience this way. With testeasypom , just typing *mvn*  defaults to mevn test.
+Make it a habit to do `mvn test` instead of `mvn package`. `mvn package` typically does much more work than really required to get your tests do thier work. Enjoy the better maven experience this way. With testeasypom , just typing *mvn*  defaults to mvn test.
 
 === Run an JavaFX application with this parent pom
 
@@ -111,7 +109,7 @@ If you want to deploy an artifact using this pom as parent to maven-central, you
 * Add a description to the dependent pom.xml
 * Add the developer info to the dependent pom.xml.
 * Add the url of the project.
-* Make sure you have a working gpg config and as described in https://central.sonatype.org/publish/publish-maven/[sonatyp publish maven artifact].
+* Make sure you have a working gpg config and as described in https://central.sonatype.org/publish/publish-maven/[sonatype publish maven artifact].
 
 Then deploy using the ossrh-release profile as in
 
